# doc2dash

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.public.yml  git-audit.txt  pytest.ini
apps/api/: .env.hosted.example  pyproject.toml
apps/api/.vendor/fastapi-0.135.3.dist-info/: RECORD
apps/api/.vendor/httpx-0.28.1.dist-info/: RECORD
apps/api/.vendor/numpy-2.4.4.dist-info/: RECORD
apps/api/.vendor/pygments-2.20.0.dist-info/: RECORD
apps/api/.vendor/pytest-9.0.2.dist-info/: RECORD
apps/api/.vendor/python_dotenv-1.2.2.dist-info/: RECORD
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/core/: __init__.py  config.py  errors.py
apps/api/app/pipelines/: detect_tables.py  normalize_tables.py  profile_tables.py  select_default_view.py
apps/api/app/schemas/: api.py  manifest.py  narratives.py  uploads.py
apps/api/app/services/: chart_strategy.py  narrative_summary.py  preview_search.py  upload_bundle_store.py  workbook_ingestion.py
apps/api/app/utils/: file_validation.py  ids.py
apps/api/doc2dash_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: conftest.py
apps/api/tests/fixtures/: Google Finance Investment Tracker.xlsx  Monthly budget.xlsx  README.md  __init__.py  costs of 2025.xlsx  fixture_catalog.py
apps/api/tests/integration/: test_detect_tables_manifest.py  test_fixture_library_regressions.py  test_hosted_frontend_integration.py  test_normalize_profile_pipeline.py  test_search_api.py  test_uploads.py
apps/api/tests/unit/: test_chart_strategy.py  test_detect_tables.py  (+7 more)
(+259 files in other folders)
